[package]
name = "jaamlong"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "postgres", "bigdecimal", "macros", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
anyhow = "1.0.72"
uuid = {version = "1.4.1", features = ["serde", "v5"]}
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
axum = "0.6.20"
tracing = "0.1.35"
serde = { version = "1.0.159", features = ["derive"] }
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.0", features = ["cors"] }
validator = "0.16.1"
serde_json = "1.0.95"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
web3 = "0.19.0"
secp256k1 = { version = "0.28.0", default-features = true, features = ["recovery"] }
bigdecimal = { version = "0.4.1", features = ["serde"]}
jsonwebtoken = "9.1.0"
rlp = "0.5.2"
p256 = { version = "0.13.2", features = ["ecdh", "ecdsa", "serde"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
chacha20poly1305 = "0.10"
hkdf = "0.12.3"
sha2 = "0.10.8"
redis = "0.23.3"
axum-extra = { version = "0.8.0", features = ["cookie"] }

